# taiwan-law-rag-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: chunk_ids.json
data/bm25_index/: MAIN_vwcmxd8dk5k8b2uq.seg  _MAIN_1.toc
docs/: API.md  INSTALLATION.md  USAGE.md
mcp-server/: package-lock.json  package.json  test.js
mcp-server/src/: index.ts
plan/: OPTIMIZATION_PLAN.md  TODO.md  VIBE_CODING_PROMPT.md  phase13_ux_optimization.md
plan/log/: README.md  phase10_evaluation_pipeline.md  phase11_rag_generation.md  phase12_query_understanding.md  phase13_ux_optimization.md  phase2_walkthrough.md  phase3.md  phase4_retrieval.md  phase5_fastapi_service.md  phase6_mcp_server.md  phase7_gpu_issue.md  phase8_langchain_provider_and_mcp_integration.md  phase9_auto_download_and_diff.md
python-rag/: main.py  requirements.txt
python-rag/api/: cache.py  chat_routes.py  health.py  models.py  routes.py  session_routes.py
python-rag/data_processing/: __init__.py  chunker.py  law_aliases.py  loader.py  metadata_enricher.py
python-rag/evaluation/: __init__.py  dataset.py  evaluator.py  exceptions.py  metrics.py  models.py  report.py
python-rag/generation/: base.py  langchain_provider.py  rag_chain.py
python-rag/indexing/: bm25_indexer.py  embedder.py  faiss_indexer.py  rebuild_index.py
python-rag/providers/: __init__.py  base.py  (+4 more)
scripts/: build_index.py  check_gpu.py  download_data.py  golden_dataset.example.json  run_evaluation.py  run_phase2.py  setup.bat  setup.py  test_phase2.py  test_query.py
tests/: test_cli_dispatcher.py  test_setup.py
(+45 files in other folders)
