[project]
name = "legel-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.7.4",
    "fastapi==0.104.1",
    "jieba==0.42.1",
    "numpy==1.24.3",
    "pydantic==2.5.0",
    "python-multipart==0.0.6",
    "sentence-transformers>=3.0.0",
    "uvicorn[standard]==0.24.0",
    "whoosh==2.7.4",
]
